# cloudscope

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README-DEV.md  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: tests.yml
docs/: acqstore_api.md  acqstore_kymograph_axes.md  architecture.md  cloudscope_architecture.md  cloudscope_diameter_glue.md  cloudscope_packaging.md  cloudscope_project_rules.md  code_review.md  cursor_understanding.md  nicewidgets_api.md
docs/acqstore/: radon_velocity_analysis.md  sample_data.md  schemas.md
docs/codex_tickets/: 001_coverage_omit_list_report.md  002_analysis_controller_tests_report.md  003_event_analysis_controller_tests_report.md  004_load_save_controller_tests_report.md  005_load_save_view_helper_tests_report.md  006_schema_card_widget_tests_report.md  007_metadata_view_tests_report.md  008_analysis_view_tests_report.md  009_primary_image_view_handler_tests_report.md  010_acq_analysis_plot_view_tests_report.md  011_echart_widget_tests_report.md  012_raster_service_tests_report.md  013_plotly_viewer_state_tests_report.md  014_image_toolbar_handlers_tests_report.md  015_final_coverage_verification_report.md  016_selection_label_in_base_view_report.md  017_remove_view_cards_report.md  018_app_state_visible_file_ids_provider_report.md  019_batch_roi_mode_contract_report.md  020_batch_preview_helpers_report.md  021_batch_dialog_preview_live_results_report.md  022_raster_viewer_bottom_left_y_origin_report.md  023_promote_tree_widget_phase_1_4_report.md  024_acqstore_tree_row_api_report.md  025_swap_file_list_view_to_treewidget_report.md  026_tree_view_ux_fixes_report.md
docs/tickets/: 001_add_import_path_discovery.md
example-data/cond1/: 20251030_A106_0002.oir.json  20251030_A106_0002.oir.radon_velocity.csv
example-data/cond2/: 20251030_A106_0003.oir.json  20251030_A106_0003.oir.radon_velocity.csv  20251030_A106_0004.oir.json  20251030_A106_0004.oir.radon_velocity.csv  20251030_A106_0005.oir.json  20251030_A106_0005.oir.radon_velocity.csv
packaging/macos/: .gitignore  README.md  _config.sh  _secrets.example.sh  build_app.sh  build_info.sh  codesign_and_zip.sh  make_release_zip.sh  notary_poll_until_done.sh  notary_submit.sh  release_pipeline.sh  set_plist_versions.sh  staple_and_verify.sh
sandbox/: echart_zoom.py
sandbox/demo_tree_app/: demo_tree_app.py  simple_demo_app.py
scripts/acqstore/: try_acq_analysis.py  try_acq_image.py  try_create_roi.py  try_diameter_analysis.py  try_diameter_batch.py  try_event_analysis.py  try_image_loaders.py  try_metadata.py  try_radon_analysis.py  try_radon_batch_analysis.py  try_velocity_batch.py
src/acqstore/: README.md  __init__.py  sample_data.py  schema.py
src/cloudscope/: __init__.py  _py_web_view.py  app.py  app_config.py  build_info.py  event_bus.py  events.py  protocols.py  schema_adapters.py  state.py  task_runner.py
src/nicewidgets/: __init__.py  gui_defaults.py
tests/: test_controller.py  test_plotly_raster_context_menu.py  test_roi.py
tests/acqstore/: conftest.py  test_acq_analysis_set.py  test_acq_image_list.py  test_acq_image_list_progress_cancel.py  test_acq_image_sidecar.py  test_acq_image_tree_rows.py  test_analysis_dependencies.py  test_analysis_detection_schema.py  test_analysis_dirty.py  test_analysis_events.py  test_analysis_exclusion.py  test_analysis_key.py  test_analysis_plot_data.py  test_analysis_run_context.py  (+21 more)
(+235 files in other folders)
