[project]
name = "cloudscope"
version = "0.1.0"
description = "Thin-frontend NiceGUI app for viewing, annotating, and analyzing acquisition-backed files."
readme = "README.md"
authors = [
    { name = "Robert Cudmore", email = "robert.cudmore@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.10.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "tifffile>=2026.4.11",
    "czifile>=2026.4.11",
    "oirfile>=2026.4.18",
    "platformdirs>=4.9.6",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 140
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = ["I001"] # Specifically turns off unsorted-imports

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
