[project]
name = "cloudscope"
version = "0.1.0"
description = "Thin-frontend NiceGUI app for viewing, annotating, and analyzing acquisition-backed files."
readme = "README.md"
authors = [
    { name = "Robert Cudmore", email = "robert.cudmore@gmail.com" },
]
keywords = [
    "acquisition",
    "image-analysis",
    "microscopy",
    "nicegui",
    "visualization",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.10.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "tifffile>=2026.4.11",
    "czifile>=2026.4.11",
    "oirfile>=2026.4.18",
    "platformdirs>=4.9.6",
    "pywebview>=6.2.1",
    "pillow>=12.2.0",
    "scikit-image>=0.24.0",
    "pyperclip",  # to copy tables
    "pooch>=1.9.0",  # to download from cloudscope-data
    "pyperclipimg>=0.2.0",  # to copy plotly plot
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
omit = [
    "src/cloudscope/app.py",
    "src/cloudscope/devtools/*",
    "src/nicewidgets/raster_viewer/demo/*",
    "src/nicewidgets/table_widget/demo_app.py",
    "src/nicewidgets/gui_defaults.py",
]

[tool.ruff]
line-length = 140
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = ["I001"] # Specifically turns off unsorted-imports

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[project.urls]
Homepage = "https://github.com/mapmanager/cloudscope"
Repository = "https://github.com/mapmanager/cloudscope"
Issues = "https://github.com/mapmanager/cloudscope/issues"
Documentation = "https://github.com/mapmanager/cloudscope#readme"
